feat:`GetNews` (#227)
* simplified the saving of images
* updated the generated files
