# server/api/tumdev/campus_backend.swagger.json
@@ -883,6 +883,50 @@
         ]
       }
     },
+    "/news/{lastNewsId}": {
+      "get": {
+        "operationId": "Campus_GetNews",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/apiNewsItem"
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "lastNewsId",
+            "description": "the last id of the news item received. 0 to get all news items",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "newsSource",
+            "description": "filter by news source id. 0 to get all news items",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "Campus"
+        ]
+      }
+    },
     "/notifications/confirm/{notificationId}": {
       "get": {
         "operationId": "Campus_GetNotificationConfirm",
@@ -1555,6 +1599,18 @@
         }
       }
     },
+    "apiGetNewsReply": {
+      "type": "object",
+      "properties": {
+        "news": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/apiNewsItem"
+          }
+        }
+      }
+    },
     "apiGetNotificationsConfirmReply": {
       "type": "object",
       "properties": {
@@ -1911,6 +1967,34 @@
         "comment": {
           "type": "string",
           "title": "Optional comment (max 256 chars)"
+        }
+      }
+    },
+    "apiNewsItem": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "title": {
+          "type": "string"
+        },
+        "text": {
+          "type": "string"
+        },
+        "link": {
+          "type": "string"
+        },
+        "imageUrl": {
+          "type": "string"
+        },
+        "source": {
+          "type": "string"
+        },
+        "created": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
